fix saveItem on small device

--- a/src/components/LeftPanel/LeftPanel.module.scss
+++ b/src/components/LeftPanel/LeftPanel.module.scss
@@ -4,7 +4,8 @@
 }
 
 @media only screen and (max-width: 800px) {
-  .mainPanel {
-    height: 80vh;
+  .leftPanel {
+    height: 70vh;
+    width: 95%;
   }
 }
