--- a/src/components/SaveList/SaveList.module.scss
+++ b/src/components/SaveList/SaveList.module.scss
@@ -16,5 +16,6 @@
     align-items: center;
     overflow-y: auto;
     max-height: 60vh;
+    width: 100%;
   }
 }
